k8s/db-deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener-mysql
  labels:
    app: shortener
spec:
  ports:
    - port: 3306
  selector:
    app: shortener
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-mysql
  labels:
    app: shortener
spec:
  selector:
    matchLabels:
      app: shortener
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shortener
        tier: mysql
    spec:
      containers:
        - image: mysql:latest
          name: mysql
          livenessProbe:
            tcpSocket:
              port: 3306
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
