k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image:  nginx:latest
          ports:
            - containerPort:  80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: nginxconfig
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: tls-certs
              mountPath: /etc/nginx/certs
              readOnly: true
      volumes:
        - name: nginxconfig
          configMap:
            name: nginx-config
        - name: tls-certs
          secret:
            secretName: tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30999
    - name: nginx-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30988
  type: NodePort
  selector:
    app: nginx
