k8s/shortener_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-url
  labels:
    app: shortener-url
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shortener-url
  template:
    metadata:
      labels:
        app: shortener-url
    spec:
      containers:
        - name: shortener-url
          image: ottokafka2/shortener-url:0.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: shortener-url
  labels:
    app: shortener-url
spec:
  type: NodePort
  selector:
    app: shortener-url
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
